--- a/First_tutorial/muber/package.json
+++ b/First_tutorial/muber/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon --exec 'mocha --recursive -R min --exit'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "mocha": "^6.2.0",
-    "mongoose": "^5.6.7"
+    "mongoose": "^5.6.7",
+    "nodeman": "^1.1.2",
+    "supertest": "^4.0.2"
   }
 }
