--- a/First_tutorial/muber/package.json
+++ b/First_tutorial/muber/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mocha": "^6.2.0",
     "mongoose": "^5.6.7",
