--- a/First_tutorial/muber/package.json
+++ b/First_tutorial/muber/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon --exec 'mocha --recursive -R min --exit'"
+    "test": "NODE_ENV=test nodemon --exec 'mocha --recursive -R min --exit'"
   },
   "author": "",
   "license": "ISC",
